web/css/site.css
html,
body {
    height: 100%;
}

.wrap {
    min-height: 100%;
    height: auto;
    margin: 0 auto -60px;
    padding: 0 0 60px;
}

.wrap > .container {
    padding: 70px 15px 20px;
}

.footer {
    height: 60px;
    background-color: #f5f5f5;
    border-top: 1px solid #ddd;
    padding-top: 20px;
}

.jumbotron {
    text-align: center;
    background-color: transparent;
}

.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}

.not-set {
    color: #c55;
    font-style: italic;
}

/* add sorting icons to gridview sort links */
a.asc:after, a.desc:after {
    position: relative;
    top: 1px;
    display: inline-block;
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    padding-left: 5px;
}

a.asc:after {
    content: /*"\e113"*/ "\e151";
}

a.desc:after {
    content: /*"\e114"*/ "\e152";
}

.sort-numerical a.asc:after {
    content: "\e153";
}

.sort-numerical a.desc:after {
    content: "\e154";
}

.sort-ordinal a.asc:after {
    content: "\e155";
}

.sort-ordinal a.desc:after {
    content: "\e156";
}

.grid-view th {
    white-space: nowrap;
}

.hint-block {
    display: block;
    margin-top: 5px;
    color: #999;
}

.error-summary {
    color: #a94442;
    background: #fdf7f7;
    border-left: 3px solid #eed3d7;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

/* Comment Box */
.detailBox {
    border:1px solid #bbb;
}

.titleBox {
    background-color:#fdfdfd;
    padding:10px;
}

.titleBox label{
    color:#444;
    margin:0;
    display:inline-block;
}

.commentBox {
    padding:10px;
    border-top:1px dotted #bbb;
}

.commentBox .form-group:first-child, .actionBox .form-group:first-child {
    width:400px;
}

.actionBox .form-group * {
    width:100%;
}

.taskDescription {
    margin-top:10px 0;
}

.commentList {
    padding:0;
    list-style:none;
    max-height:200px;
    overflow:auto;
}

.commentList li {
    margin:0;
    margin-top:10px;
}

.commentList li > div {
    display:table-cell;
}

.commenterImage {
    width:30px;
    margin-right:5px;
    height:100%;
    float:left;
}

.commenterImage img {
    width:100%;
    border-radius:50%;
}

.commentText p {
    margin:0;
}

.sub-text {
    color:#aaa;
    font-family:verdana;
    font-size:11px;
}

.actionBox {
    border-top:1px dotted #bbb;
    padding:10px;
}
/* End of Comment Box */

.no-avatar {
    display: inline-block;
    background: #428bca;
    color: white;
    width: 32px;
    height: 32px;
    text-align: center;
    vertical-align: middle;
    font-size: 18pt;
    margin-right: 15px;
}

